--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
         <title>Neogift</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="css/screen.css" rel="stylesheet">
     </head>
     <body>
         <h1>Neogift</h1>
